# fastapi-amazon-example

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
app/: application.py  config.py  main.py  pyproject.toml  repositories.py  resources.py  routes.py  schemas.py  services.py
app/tests/: test_main.py
tests/: conftest.py  test_main.py  test_repositories.py  test_services.py
