[tool.poetry]
name = "fastapi amazon example"
version = "0.0.1"
description = "example project fastapi + serverless"
authors = ["Asman Malikov <asmanmalikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.15"
fastapi = "^0.86.0"
pytest = "^7.2.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"
mangum = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
